test_suite5/ALAN/test_suite/alan-2022-examples/failing/001540_mutation.alan
source z begin call z(965, put) end
